--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,7 @@ name: batch_rename
 description: A CLI tool to help batch renaming files.
 version: 1.0.0
 # homepage: https://www.example.com
+repository: https://github.com/POWRFULCOW89/batch-rename-dart
 
 environment:
   sdk: '>=2.14.4 <3.0.0'
